@@ -1,0 +1,15 @@
+DEFINED_PHASES=compile install postinst postrm preinst prepare setup test unpack
+DEPEND=!build? ( sys-apps/sed >=sys-devel/binutils-2.11.90.0.31 ) deblob? ( || ( >=dev-lang/python-2.7.5-r2:2.7 >=dev-lang/python-2.6.8-r3:2.6 ) )
+DESCRIPTION=Full sources including the Gentoo patchset for the 3.10 kernel tree and aufs3 support
+EAPI=5
+HOMEPAGE=http://dev.gentoo.org/~mpagano/genpatches http://aufs.sourceforge.net/
+IUSE=deblob experimental module vanilla symlink build deblob
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-2 !deblob? ( freedist )
+PDEPEND=>=sys-fs/aufs-util-3.9 !build? ( virtual/dev-manager )
+RDEPEND=!build? ( >=sys-libs/ncurses-5.2 sys-devel/make dev-lang/perl sys-devel/bc )
+RESTRICT=binchecks strip
+SLOT=3.10.39
+SRC_URI=mirror://kernel/linux/kernel/v3.x/linux-3.10.tar.xz deblob? ( http://www.fsfla.org/svnwiki/selibre/linux-libre//download/releases/LATEST-3.10.N/deblob-3.10 http://www.fsfla.org/svnwiki/selibre/linux-libre//download/releases/LATEST-3.10.N/deblob-check -> deblob-check-3.10 ) http://dev.gentoo.org/~jlec/distfiles/aufs-sources-3.10.x_p20140420.tar.xz !vanilla? ( mirror://gentoo/genpatches-3.10-46.base.tar.xz mirror://gentoo/genpatches-3.10-46.extras.tar.xz experimental? ( mirror://gentoo/genpatches-3.10-46.experimental.tar.xz ) )
+_eclasses_=eutils	025442f2eecab39ad0b4e541b6e142af	kernel-2	6fb31411472936acc8287129d3df7f43	multilib	fac675dcccf94392371a6abee62d909f	python-any-r1	4560effd96d3d2a82e50af7cf87166da	python-utils-r1	52284f64cfc64a6d70bc00a9f5a01c6f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	versionator	a8a3963967d6140be9a14b08bb8f047f
+_md5_=7a5f0172ca4cc833ee67a2e9e30d354b
