@@ -1,6 +1,13 @@
 # ChangeLog for sys-kernel/aufs-sources
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/aufs-sources/ChangeLog,v 1.110 2014/04/28 13:08:53 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/aufs-sources/ChangeLog,v 1.111 2014/05/07 07:55:28 jlec Exp $
+
+*aufs-sources-3.14.3 (07 May 2014)
+*aufs-sources-3.10.39 (07 May 2014)
+
+  07 May 2014; Justin Lecher <jlec@gentoo.org> +aufs-sources-3.10.39.ebuild,
+  +aufs-sources-3.14.3.ebuild:
+  Bump to latest genpatches and linux release
 
 *aufs-sources-3.14.2 (28 Apr 2014)
 *aufs-sources-3.12.18 (28 Apr 2014)
